Primera versión del sitio del Club Chulo

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ footer{background:#111;color:#d1d5db}
   <!-- Hero -->
   <section class="hero">
     <div class="container hero-inner">
-      <span class="badge">CLUB SOCIAL Y DEPORTIVO</span>
+      <span class="badge">CLUB SOCIAL Y DEPORTIVO CHULO</span>
       <h1>De barrio, con garra y corazón</h1>
       <p>Unidos por el deporte y la comunidad desde 1958.</p>
       <div class="hero-buttons">
