--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ footer{background:#111;color:#d1d5db}
   <section class="hero">
     <div class="container hero-inner">
       <span class="badge">CLUB SOCIAL Y DEPORTIVO CHULO</span>
-      <h1>De barrio, con garra y corazón</h1>
-      <p>Unidos por el deporte y la comunidad desde 1958.</p>
+      <h1 style="color: #0b0b0b;">De barrio, con garra y corazón</h1>
+      <p style="color: #0b0b0b;">Unidos por el deporte y la comunidad desde 1958.</p>
       <div class="hero-buttons">
         <a class="btn primary" href="#socios">Hacete socio/a</a>
         <a class="btn ghost" href="#actividades">Ver actividades</a>
