--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:hover{text-decoration:underline}
 }
 .nav{display:flex;align-items:center;justify-content:space-between;gap:16px;padding:12px 0}
 .brand{display:flex;align-items:center;gap:12px}
-.brand img{width:46px;height:46px}
+.brand img{width:99px;height:99px}
 .brand .name{font-weight:900;letter-spacing:.4px}
 .brand .meta{font-size:12px;color:var(--muted)}
 .menu{display:flex;align-items:center;gap:18px}
@@ -149,7 +149,7 @@ footer{background:#111;color:#d1d5db}
   <section class="hero">
     <div class="container hero-inner">
       <span class="badge">CLUB SOCIAL Y DEPORTIVO CHULO</span>
-      <h1 style="color: #0b0b0b;">De barrio, con garra y corazón</h1>
+      <h1 style="color: #0b0b0b;">Creciendo juntos, por y para el barrio.</h1>
       <p style="color: #0b0b0b;">Unidos por el deporte y la comunidad desde 1958.</p>
       <div class="hero-buttons">
         <a class="btn primary" href="#socios">Hacete socio/a</a>
@@ -201,7 +201,7 @@ footer{background:#111;color:#d1d5db}
       <div class="grid cols-3">
         <div class="card">
           <div class="kicker">Oct 2025</div>
-          <strong>Inscripciones abiertas 2025</strong>
+          <strong>Nueva Bibloteca Barrial!</strong>
           <p>Sumate a nuestras actividades. Cupos limitados.</p>
         </div>
         <div class="card">
