--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ a:hover{text-decoration:underline}
 /* Hero */
 .hero{
   position:relative;
-  background: radial-gradient(1400px 600px at 50% -100px, var(--red) 0, #ff6b74 45%, #fff 46%);
+  /*background: radial-gradient(1400px 600px at 50% -100px, var(--red) 0, #ff6b74 45%, #fff 46%);*/
+  background-color: currentColor;
   color:#fff;
 }
 .hero-inner{padding:70px 0 96px;text-align:center}
@@ -167,10 +168,10 @@ footer{background:#111;color:#d1d5db}
       <h2>Actividades</h2>
       <p class="lead">Programas para todas las edades y niveles. ¡Arrimate!</p>
       <div class="grid cols-4">
-        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">⚽</span>Fútbol 7</strong><p>Escuelita, formativas y mayores.</p></div>
+        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">🥋</span>Karate</strong><p>Escuelita, formativas y mayores.</p></div>
         <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">🏐</span>Voleibol</strong><p>Mixto, recreativo y competitivo.</p></div>
-        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">💪</span>Funcional</strong><p>Entrenamiento integral.</p></div>
-        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">⛸️</span>Patín</strong><p>Inicial y avanzado.</p></div>
+        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">💪</span>Gimnasio</strong><p>Entrenamiento integral.</p></div>
+        <div class="card"><div class="kicker">Actividad</div><strong><span class="icon">📚</span>Lectura</strong><p>Prestamo de libros - Sala de lectura.</p></div>
       </div>
     </div>
   </section>
@@ -181,13 +182,13 @@ footer{background:#111;color:#d1d5db}
       <h2>Horarios</h2>
       <div class="table-wrap">
         <table class="table">
-          <thead><tr><th>Día</th><th>Actividad</th><th>Hora</th><th>Sede</th></tr></thead>
+          <thead><tr><th>Día</th><th>Actividad</th><th>Hora</th><th>Descripción</th></tr></thead>
           <tbody>
-            <tr><td>Lun</td><td>Funcional</td><td>19:00–20:00</td><td>Gimnasio A</td></tr>
-            <tr><td>Mar</td><td>Fútbol 7 (mayores)</td><td>20:00–22:00</td><td>Cancha 1</td></tr>
+            <tr><td>Lun</td><td>Gimnasio</td><td>19:00–20:00</td><td>Gimnasio A</td></tr>
+            <tr><td>Mar</td><td>Karate (Niños)</td><td>20:00–22:00</td><td>Cancha 1</td></tr>
             <tr><td>Mié</td><td>Voleibol</td><td>19:30–21:00</td><td>Gimnasio B</td></tr>
-            <tr><td>Jue</td><td>Escuelita Fútbol</td><td>18:00–19:00</td><td>Cancha 2</td></tr>
-            <tr><td>Sáb</td><td>Partido 1ª</td><td>16:00</td><td>Cancha 1</td></tr>
+            <tr><td>Jue</td><td>Sala de lectura</td><td>18:00–19:00</td><td>Cancha 2</td></tr>
+            <tr><td>Sáb</td><td>Evento Social</td><td>16:00</td><td>Cancha 1</td></tr>
           </tbody>
         </table>
       </div>
@@ -201,8 +202,8 @@ footer{background:#111;color:#d1d5db}
       <div class="grid cols-3">
         <div class="card">
           <div class="kicker">Oct 2025</div>
-          <strong>Nueva Bibloteca Barrial!</strong>
-          <p>Sumate a nuestras actividades. Cupos limitados.</p>
+          <strong>Nueva Bibloteca!</strong>
+          <p>Sumate a nuestras actividades..</p>
         </div>
         <div class="card">
           <div class="kicker">Sep 2025</div>
@@ -258,7 +259,7 @@ footer{background:#111;color:#d1d5db}
           <ul style="padding-left:18px;margin:0 0 10px">
             <li><strong>Tel:</strong> +598 0000 0000</li>
             <li><strong>Email:</strong> <a href="mailto:contacto@clubchulo.uy">contacto@clubchulo.uy</a></li>
-            <li><strong>Dirección:</strong> <a href="https://maps.google.com" target="_blank" rel="noreferrer">Calle Fútbol 1234, Montevideo</a></li>
+            <li><strong>Dirección:</strong> <a href="https://maps.app.goo.gl/umuTVDEjneiuUZsLA" target="_blank" rel="noreferrer">Dr Juan Jose de Amezaga 2071, Montevideo</a></li>
           </ul>
           <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
             <span class="badge2">Instagram</span>
