--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ a:hover{text-decoration:underline}
 /* Hero */
 .hero{
   position:relative;
-  /*background: radial-gradient(1400px 600px at 50% -100px, var(--red) 0, #ff6b74 45%, #fff 46%);*/
-  background-color: currentColor;
+  background: radial-gradient(1400px 600px at 50% -100px, #461012 0, #e1000f 45% 45%, #ffffff 46%);
+  /*background-color: currentColor;*/
   color:#fff;
 }
 .hero-inner{padding:70px 0 96px;text-align:center}
