--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ footer{background:#111;color:#d1d5db}
           </div>
           <ul style="padding-left:18px;margin:0 0 10px">
             <li><strong>Tel:</strong> +598 0000 0000</li>
-            <li><strong>Email:</strong> <a href="mailto:contacto@clubchulo.uy">contacto@clubchulo.uy</a></li>
+            <li><strong>Email:</strong> <a href="mailto:fpereirageido@gmail.com">contacto@clubchulo.uy</a></li>
             <li><strong>Dirección:</strong> <a href="https://maps.app.goo.gl/umuTVDEjneiuUZsLA" target="_blank" rel="noreferrer">Dr Juan Jose de Amezaga 2071, Montevideo</a></li>
           </ul>
           <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
